<resources>
    <string name="app_name">Talent!</string>

    <!-- Activity titles -->
    <string name="title_activity_terms_of_service">Terms of Service</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="title_activity_log_in">Log in</string>
    <string name="title_activity_landing_view">Landing View</string>
    <string name="title_activity_privacy_policy">Privacy Policy</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_enter_organization_id">Enter Organization Id</string>

    <!-- Strings related to login -->
    <string name="action_sign_in_short">Sign in</string>

    <!-- Strings related to the no network connection layout -->
    <string name="error_no_network_connection">There\'s no network connection</string>
    <string name="action_retry_connection">Tap to Retry</string>

    <!-- Strings related to the terms of service activity -->
    <string name="contact_us"><u>Contact us</u></string>
    <string name="contact_us_email">contact@talent.cr</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required.</string>
    <string name="explore_app">Not ready to Sign up? Explore the app.</string>
    <string name="have_any_questions">"Have any questions? "</string>
    <string name="landing_view_title">Your company\'s biggest assets</string>
    <string name="landing_view_subtitle">Let us help you keep track on the talent of your company.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>

    <!-- Strings related to entering organization id during sign in -->
    <string name="talent_logo">Talent! Logo</string>string>
    <string name="label_enter_organization_id">Enter the organization\'s id</string>
    <string name="label_organization_id">.talent.cr</string>
    <string name="prompt_organization_id">Organization\'s id</string>
    <string name="action_enter_organization_id">Next</string>string>
    <string name="error_invalid_organization_id">Invalid organization id.</string>

    <!-- Strings related to the sign in activity -->
    <string name="label_no_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="label_forgot_password">Forgot your password?</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Enter</string>
    <string name="error_bad_email_password">Wrong email or password.</string>
    <string name="error_invalid_email">Invalid email.</string>

    <!-- Strings related to the contact us -->
    <string name="label_contact_us">Contact us</string>
    <string name="label_first_name">First name</string>
    <string name="label_email">Email</string>
    <string name="label_issue">Issue</string>
    <string name="label_issue_type">Issue type</string>
    <string name="label_last_name">Last name</string>
    <string name="prompt_first_name">First name</string>
    <string name="spinner_title">Authentication issues</string>
    <string-array name="issue_array">
        <item >Authentication issues</item>
        <item >Account closing</item>
        <item >Other</item>
    </string-array>
    <string name="action_submit">Submit</string>
    <string name="action_confirm">OK</string>
    <string name="contact_us_thanks_message">Thanks for Getting in Touch</string>
    <string name="contact_us_email_send">You will receive an email shortly, in the meantime we invite you to explore our site.</string>

    <!-- Strings related to the about us activity -->
    <string name="label_about_us">About us</string>
    <string name="label_about_talent">About Talent!</string>
    <string name="label_purpose">Purpose</string>
    <string name="label_people">People</string>
    <string name="content_text1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas est turpis, feugiat et elementum at, pretium quis mi. Aenean vehicula, metus a finibus maximus, nisi lectus fringilla urna, vehicula pulvinar massa eros commodo orci. Proin sit amet dui pellentesque, blandit felis accumsan, rhoncus mi. </string>
    <string name="content_text2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas est turpis, feugiat et elementum at, pretium quis mi. Aenean vehicula, metus a finibus maximus, nisi lectus fringilla urna, vehicula pulvinar massa eros commodo orci. Proin sit amet dui pellentesque, blandit felis accumsan, rhoncus mi. Donec ut neque eget arcu efficitur accumsan non eu nisi. Maecenas sed feugiat diam. Donec odio mi, porttitor molestie lorem vel, ullamcorper placerat orci. Nunc lacinia volutpat felis non bibendum.</string>
    <string name="content_text3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas est turpis, feugiat et elementum at, pretium quis mi. Aenean vehicula, metus a finibus maximus, nisi lectus fringilla urna, vehicula pulvinar massa eros commodo orci. </string>
    <string name="content_text4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas est turpis, feugiat et elementum.</string>

    <!-- Strings related to the forgot password activity -->
    <string name="label_logged_in">Login works!</string>
    <string name="label_logout">Logout</string>

    <!-- Strings related to the forgot password activity -->
    <string name="label_recover_password">Recover password</string>
    <string name="label_enter_email">Enter your email</string>
    <string name="action_send_email">Send email</string>
    <string name="email_sent_message_content">
<![CDATA[
<html>
 <head></head>
 <body style="text-align:justify;color:#595959">
  If the provided email matches our records you\'ll receive an email. Please check your email to recover your password.
 </body>
</html>
]]>
</string>
    <string name="action_settings">Settings</string>

</resources>
