<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/content_template_layout"
        android:layout_width="321dp"
        android:layout_height="0dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/rounded_content_layout"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/content_logo"
            android:layout_width="@dimen/content_logo_layout_width"
            android:layout_height="@dimen/content_logo_layout_height"
            android:layout_marginStart="@dimen/content_logo_marginStart"
            android:layout_marginTop="@dimen/content_logo_marginTop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/contact_us_tv_title"
            style="@style/TitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="126dp"
            android:layout_marginStart="128dp"
            android:layout_marginTop="78dp"
            android:gravity="start"
            android:text="@string/label_about_us"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ScrollView
            android:layout_width="293dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="27dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contact_us_tv_title"
            app:layout_constraintVertical_bias="1.0">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/about_us_iv_image1"
                    android:layout_width="293dp"
                    android:layout_height="193dp"
                    android:layout_marginTop="0dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/about_us_image1" />

                <TextView
                    android:id="@+id/about_us_tv_subtitle1"
                    style="@style/SubTitleLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/label_about_talent"
                    app:layout_constraintTop_toBottomOf="@id/about_us_iv_image1" />

                <TextView
                    android:id="@+id/about_us_tv_content1"
                    style="@style/ContentTextSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:justificationMode="inter_word"
                    android:text="@string/content_text1"
                    app:layout_constraintTop_toBottomOf="@id/about_us_tv_subtitle1" />

                <TextView
                    android:id="@+id/about_us_tv_subtitle2"
                    style="@style/SubTitleLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_purpose"
                    app:layout_constraintTop_toBottomOf="@id/about_us_tv_content1" />

                <TextView
                    android:id="@+id/about_us_tv_content2"
                    style="@style/ContentTextSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/content_text2"
                    android:justificationMode="inter_word"
                    app:layout_constraintTop_toBottomOf="@id/about_us_tv_subtitle2" />

                <TextView
                    android:id="@+id/about_us_tv_subtitle3"
                    style="@style/SubTitleLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/label_people"
                    app:layout_constraintTop_toBottomOf="@id/about_us_tv_content2" />

                <TextView
                    android:id="@+id/about_us_tv_content3"
                    style="@style/ContentTextSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/content_text3"
                    android:justificationMode="inter_word"
                    app:layout_constraintTop_toBottomOf="@id/about_us_tv_subtitle3" />

                <ImageView
                    android:id="@+id/about_us_iv_image2"
                    android:layout_width="293dp"
                    android:layout_height="193dp"
                    android:layout_marginTop="12dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toBottomOf="@id/about_us_tv_content3"
                    app:srcCompat="@drawable/about_us_image1" />

                <ImageView
                    android:id="@+id/about_us_iv_image3"
                    android:layout_width="293dp"
                    android:layout_height="193dp"
                    android:layout_marginTop="16dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toBottomOf="@id/about_us_iv_image2"
                    app:srcCompat="@drawable/about_us_image1" />

                <TextView
                    android:id="@+id/about_us_tv_content4"
                    style="@style/ContentTextSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="14dp"
                    android:text="@string/content_text4"
                    android:justificationMode="inter_word"
                    app:layout_constraintTop_toBottomOf="@id/about_us_iv_image3"
                    app:layout_constraintBottom_toTopOf="parent"/>

            </LinearLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>