<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ForgotPasswordActivity">

    <include
        android:id="@+id/no_network_connection_error_layout"
        layout="@layout/no_network_connection_error"
        android:visibility="gone" />

    <include
        android:id="@+id/forgot_password_email_sent_layout"
        layout="@layout/forgot_password_email_sent"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/forgot_password_sv_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/forgot_password_iv_talent_logo"
                style="@style/PromptLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="96dp"
                android:layout_marginStart="96dp"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/forgot_password_tv_invalid_email"
                style="@style/ErrorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_invalid_email"
                app:layout_constraintStart_toStartOf="@+id/forgot_password_et_enter_email"
                app:layout_constraintTop_toBottomOf="@+id/forgot_password_et_enter_email" />

            <TextView
                android:id="@+id/forgot_password_tv_enter_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/label_enter_email"
                app:layout_constraintStart_toStartOf="@+id/forgot_password_tv_recover_password"
                app:layout_constraintTop_toBottomOf="@+id/forgot_password_tv_recover_password" />

            <Button
                android:id="@+id/forgot_password_btn_send_email"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/rounded_solid_orange_rectangle"
                android:text="@string/action_send_email"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgot_password_tv_invalid_email"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/forgot_password_et_enter_email"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_orange_border_rectangle"
                android:ems="10"
                android:hint="@string/prompt_email"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/forgot_password_tv_enter_email"
                app:layout_constraintTop_toBottomOf="@+id/forgot_password_tv_enter_email" />

            <TextView
                android:id="@+id/forgot_password_tv_recover_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:text="@string/label_recover_password"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgot_password_iv_talent_logo" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>