<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/contact_us_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:id="@+id/contact_us_confirmation_iv_talent_logo"
            style="@style/PromptLabel"
            android:layout_width="0dp"
            android:layout_height="124dp"
            android:layout_marginBottom="520dp"
            android:layout_marginEnd="116dp"
            android:layout_marginStart="121dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/talent_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <View
            android:id="@+id/contact_us_confirmation_v_rectangle"
            android:layout_width="298dp"
            android:layout_height="300dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="168dp"
            android:background="@drawable/rounded_blue_border_rectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/contact_us_confirmation_tv_title"
            style="@style/TitleLabel"
            android:layout_width="225dp"
            android:layout_height="30dp"
            android:layout_marginBottom="212dp"
            android:layout_marginTop="69dp"
            android:text="@string/contact_us_thanks_message"
            app:layout_constraintBottom_toBottomOf="@+id/contact_us_confirmation_v_rectangle"
            app:layout_constraintEnd_toStartOf="@+id/contact_us_confirmation_v_rectangle"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/contact_us_confirmation_v_rectangle"
            app:layout_constraintTop_toTopOf="@+id/contact_us_confirmation_v_rectangle" />

        <TextView
            android:id="@+id/contact_us_confirmation_tv_text"
            style="@style/ContentText"
            android:layout_width="269dp"
            android:layout_height="38dp"
            android:layout_marginBottom="131dp"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="39dp"
            android:layout_marginTop="137dp"
            android:lineSpacingMultiplier="1.2"
            android:gravity="center"
            android:text="@string/contact_us_email_send"
            app:layout_constraintBottom_toBottomOf="@+id/contact_us_confirmation_v_rectangle"
            app:layout_constraintEnd_toEndOf="@+id/contact_us_confirmation_v_rectangle"
            app:layout_constraintStart_toStartOf="@+id/contact_us_confirmation_v_rectangle"
            app:layout_constraintTop_toTopOf="@+id/contact_us_confirmation_v_rectangle" />

        <Button
            android:id="@+id/contact_us_btn_confirm"
            style="@style/ButtonText"
            android:layout_width="130dp"
            android:layout_height="49dp"
            android:layout_marginBottom="45dp"
            android:layout_marginEnd="93dp"
            android:layout_marginStart="101dp"
            android:layout_marginTop="222dp"
            android:background="@drawable/rounded_solid_orange_rectangle"
            android:text="@string/action_confirm"
            app:layout_constraintBottom_toBottomOf="@+id/contact_us_confirmation_v_rectangle"
            app:layout_constraintEnd_toEndOf="@+id/contact_us_confirmation_v_rectangle"
            app:layout_constraintStart_toStartOf="@+id/contact_us_confirmation_v_rectangle"
            app:layout_constraintTop_toTopOf="@+id/contact_us_confirmation_v_rectangle" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>